--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "css:prefix": "postcss --use autoprefixer -b 'last 10 versions' style.css -o css/style.min.css --output-style compressed"
+    "css:prefix": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.prefix.css",
+    "css:comp": "minify css/style.prefix.css > css/style.min.css"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/mirsadikov/Aer-landing#readme",
   "dependencies": {
     "autoprefixer": "^10.4.2",
+    "minify": "^8.0.3",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0"
   }
